# screen-ball

./: .gitignore  Cargo.toml  README.md  README_EN.md
assets/models/: football.fbx  football.glb  football.gltf  football.mtl
src/: area.rs  ball.rs  camera.rs  main.rs  util.rs
