[package]
name = "screen-ball"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15.0-rc"
#avian3d = "0.1"
avian3d = { git = "https://github.com/Jondolf/avian.git", branch = "main"}
# TODO 可以使用winit获取
display-info = "0.4.1"